--- a/package.json
+++ b/package.json
@@ -8,23 +8,25 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.8.1",
+    "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
     "serve-favicon": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
-    "client": "react-scripts start",
+    "dev": "nodemon server.js",
+    "react": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3003",
   "eslintConfig": {
     "extends": [
       "react-app",
